      2.12.0.]

      \item \command{R CMD INSTALL} will test loading under all installed
      sub-architectures even for packages without compiled code, unless
      the flag \option{--no-multiarch} is used.  (Pure \R packages can
      do things which are architecture-dependent: in the case which
      prompted this, looking for an icon in a Windows \R executable.)
    }
  }

  \subsection{UTILITIES}{
    \itemize{
       \item \command{R CMD check} now gives a warning rather than a
       note if it finds inefficiently compressed datasets.  With
       \command{bzip2} and \command{xz} compression having been
       available since \R 2.10.0, there is no excuse for not using them.

       \item Where multiple sub-architectures are to be tested,
       \command{R CMD check} now runs the examples and tests for all the
       sub-architectures even if one fails.

       \item \command{R CMD check} can optionally report timings on
       various parts of the check: this is controlled by environment
       variables documented in \sQuote{Writing R Extensions}.
     }
   }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item \command{R CMD Rd2dvi} is now defunct: use \command{R CMD Rd2pdf}.

      \item Options such as \code{--max-nsize} and the function
      \code{mem.limits()} are now defunct.

      \item Use of \code{library.dynam()} without specifying all the
      first three arguments is now disallowed.

      Use of an argument \code{chname} in \code{library.dynam()}
      including the extension \file{.so} or \code{.dll} (which was never
      allowed according to the help page) is defunct.  This also applies
      to \code{library.dynam.unload()} and to \code{useDynLib}
      directives in \code{NAMESPACE} files.

      \item The internal functions (but still used by some packages)
      \code{.readRDS()} and \code{.saveRDS()} are now defunct.

      \item The off-line \code{help()} types \samp{"postscript"} and
      \samp{"ps"} are defunct.
